--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bluebird": "3.0.5",
     "boom": "2.9.0",
     "hapi": "10.4.1",
+    "hapi-auth-jwt2": "5.2.1",
     "joi": "6.9.0",
-    "mongoose": "4.1.11"
+    "mongoose": "4.1.11",
+    "shortid": "2.2.4"
   },
   "devDependencies": {
     "chai": "3.3.0",
