--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hapi": "10.4.1",
     "hapi-auth-jwt2": "5.2.1",
     "joi": "6.9.0",
+    "jsonwebtoken": "^5.4.1",
     "mongoose": "4.2.7",
     "shortid": "2.2.4"
   },
