--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - 5
 
 env:
-  - DB_TEST_URI=mongodb://localhost:27017/start-hapiness_test
+  - DB_TEST_URI=mongodb://localhost:27017/start-hapiness_test JWT=awesomeSecretKeyHere
 
 services:
   - mongodb
