--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "scripts/test",
-    "cover": "scritps/coverage",
+    "cover": "scripts/coverage",
     "build": "scripts/build",
     "duplicate": "scripts/duplicate",
     "start": "node index.js"
