--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "author": "Marcos Bérgamo <marcos@thedon.com>",
   "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.3.0",
+    "bcryptjs": "2.3.0",
     "bluebird": "3.0.5",
     "boom": "2.9.0",
-    "hapi": "10.4.1",
+    "glob": "6.0.1",
+    "good": "6.4.0",
+    "good-console": "5.2.0",
+    "good-file": "5.1.1",
+    "hapi": "11.1.2",
     "hapi-auth-jwt2": "5.2.1",
+    "hapi-boom-decorators": "1.0.2",
     "joi": "6.9.0",
     "jsonwebtoken": "5.4.1",
     "mongoose": "4.2.7",
