--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "scripts": {
     "test": "scripts/test",
-    "cover": "scripts/coverage",
-    "build": "scripts/build",
-    "duplicate": "scripts/duplicate",
-    "start": "node index.js"
+    "bootstrap": "scripts/bootstrap",
+    "setup": "scripts/setup",
+    "update": "scripts/update",
+    "start": "scripts/server"
   },
   "author": "Marcos Bérgamo <marcos@thedon.com>",
   "license": "MIT",
@@ -17,7 +17,7 @@
     "bcryptjs": "2.3.0",
     "bluebird": "3.0.5",
     "boom": "2.9.0",
-    "dotenv": "^2.0.0",
+    "dotenv": "2.0.0",
     "glob": "6.0.1",
     "good": "6.4.0",
     "good-console": "5.2.0",
