[FIX] Defaulting database connection options && fix .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - 5
 
 env:
-  - DB_TEST_URI=mongodb://localhost:27017/start-hapiness_test JWT=awesomeSecretKeyHere
+  - DB_NAME=hapiness DB_HOST=localhost DB_PORT=27017 JWT=awesomeSecretKeyHere
 
 services:
   - mongodb
