--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "joi": "6.9.0",
     "jsonwebtoken": "5.4.1",
     "lodash": "4.5.1",
-    "k7": "git@github.com:thebergamo/k7.git",
-    "k7-mongoose": "git@github.com:thebergamo/k7-mongoose.git",
+    "k7": "1.x.x",
+    "k7-mongoose": "1.x.x",
     "shortid": "2.2.4"
   },
   "devDependencies": {
